# Railway-Reservation-gtk_c

./: CMakeLists.txt  Makefile  README.md  application_functions.h  callbacks.h  debug.h  functions.c  functions.h  main.c  slots.c  slots.h  sqlite_funcs.c  structures.h  thread_funcs.c
Design/DB/: commands.md  design.db  design.drawio
Design/UI/: RailwayReservation_uidesign.fig
resources/UI/: UI.glade  style.css
resources/bins/: wkhtmltoimage
resources/docs/: credits.txt  docs.txt
resources/scripts/: reports.py  sql.sql
